# kumi_module_test

./: CMakeLists.txt  ReadMe.adoc
src/: inline_kumi.ixx  kumi.ixx
standalone_test/: CMakeLists.txt
standalone_test/src/: main.cpp
